Bug 631337 - Cannot resize the window using the corner resizer when body is position:relative.  r=roc a=blocking2.0:final